@@ -21,6 +21,7 @@ rules-edit: new 'filter=(service has.value.only [443])'
 address-merger: introduce argument debugapi and exportcsv | which print out per object value the objects replaced by the kept one | improve output for ancestor
 service-merger: introduce new dupalgorithm sameDstSrcport
 service-edit: new filter (value string.eq [DstPort])
+service-edit: new filter (overrides.upper.level/overriden.at.lower.level)
 
 bugfix:
 - fixed rule 'filter=(rule has.destination.nat)'
